# intel-gemm

./: Android.mk  CMakeLists.txt  README.md
GEMM/: gemm.cpp
common/: basic.cpp  basic.hpp  oclobject.cpp  oclobject.hpp  utils.cpp  utils.h  yuv_utils.h
